--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -4,11 +4,11 @@
   <a href="#contact">Contact</a>
   <a href="#about">About</a>
 </div>
-<div class="container">
+<div class="container sidebar">
     <div class="row">
-        <div class="col-sm-3 col-md-3">
+        <div class="col-sm-2 col-md-2">
             <div class="panel-group" id="accordion">
-                <div class="panel panel-default">
+                <div class="panel panel-dark">
                     <div class="panel-heading">
                         <h4 class="panel-title">
                             <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne"><span class="glyphicon glyphicon-folder-close">
