adding users for page and rouing for users

--- a/src/app/content/content.component.html
+++ b/src/app/content/content.component.html
@@ -1,3 +1,4 @@
 <div class="panel main-panel col-md-offset-1 col-md-10">
-  <app-overview></app-overview>
+
+  <router-outlet></router-outlet>
 </div>
