--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -1,8 +1,9 @@
 <div class="topnav">
-  <a class="active" href="#home">Home</a>
-  <a href="#news">News</a>
-  <a href="#contact">Contact</a>
-  <a href="#about">About</a>
+  <a class="active" href="">Cloudy UI</a>
+  <a class="pull-right" href="#home">Logout <span class="glyphicon glyphicon-off" aria-hidden="true"></span></a>
+  <a class="pull-right" href="#news">News <span class="glyphicon glyphicon-envelope" aria-hidden="true"></span></a>
+  <a  class="pull-right" href="#contact"> Contact <span class="glyphicon glyphicon-phone" aria-hidden="true"></span></a>
+  <a  class="pull-right" href="#about">About <span class="glyphicon glyphicon-phone" aria-hidden="true"></span></a>
 </div>
 <div class="container sidebar">
     <div class="row">
